--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -3,17 +3,19 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: blog
+title: gvvl's blog
 subtitle:
-description: 颤抖吧~
-author: 默罕默德·甜不辣
+description: just eat now
+author: gvvl
 language: zh-Hans
 timezone:
 avatar: /images/avatar.png
 duoshuo_shortname: gvvl
 baidu_analytics: 6668287b21be5a6e3dc680de8a7d9f30
 # JiaThis 分享服务
-jiathis: true
+jiathis: false
+# 多说分享服务
+duoshuo_share: true
 # swiftype_key: kHx5skhv-mFfhLzxGh33
 search:
   path: search.xml
@@ -21,7 +23,7 @@ search:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://gvvl.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -66,7 +68,7 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 5
 pagination_dir: page
 
 # Extensions
