check title logo

--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: gvvl's blog
+title: m's snippets
 subtitle:
 description: just eat now
 author: gvvl
